themes/red/assets/css/site.css
/* desktop devices */
@media (min-width: 768px) {
    header {
        margin: 5px;
    }

    aside {
        margin: 5px;

        flex: 15em 0 0;
    }

    article {
        margin: 5px;
    }

    footer {
        margin: 5px;
    }

    #content {
        display: flex;
        flex-direction: row;
    }

    body {
        max-width: 100em;
    }

    .featured-art {
        height: 256px;
        width: auto;
    }

    .grid-sizer, .grid-item {
        /* Almost pixel perfect! */
        width: calc(33.33% - 7.5px);
    }

    .grid-item-wide {
        width: calc(66.667% - 7.5px);
    }

    .page-pic {
        float: right;
        margin-bottom: 10px;
        margin-left: 10px;
    }

    .art-outer {
        display: flex;
        flex-direction: row;
    }

    .art-inner {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
    }

    #nav-menu > summary {
        visibility: hidden;
        height: 0;
    }
}

@media (min-width: 1100px) {
    #detail-pane {
        display: block !important;
    }

    #art-detail-inline {
        display: none;
    }
}

.gutter-sizer {
    width: 10px;
}

#detail-pane {
    display: none;
}

/* mobile devices */
@media (max-width: 768px) {
    aside div {
        padding: 2px;
    }

    aside div a {
        font-size: 135%;
        margin-top: 13px;
        margin-bottom: 13px;
    }

    header {
        margin: 5px;
    }

    aside {
        margin: 5px;
    }

    article {
        margin: 5px;
    }

    footer {
        margin: 5px;
    }

    .featured-art {
        height: auto;
        width: 100%;
    }

    .grid-sizer, .grid-item {
        width: 100%;
        height: auto;
    }

    .page-pic {
        display: none;
    }

    .site-menu > img {
        float: left;
        margin-left: 5px;
        margin-top: 10px;
        width: 25px;
        height: 25px;
    }

    #koring {
        display: none;
    }
}

body {
    background-color: var(--background-primary);
    accent-color: var(--accent-color);

    color: var(--text-color);
    font-family: sans-serif;
}


:root {
    --link: #6a3434;
    --secondary-accent: #c99192;
    --border-color: black;
    --background-primary: #ab4a2f;
    --background-secondary: #fdfdfd;
    --background-tertiary: #f0f0f0;
    --text-color: #363131;
    --link-visited: #460b0b;
    --extra-color: #efe4e4;
    --border: 3px double var(--border-color);
    --shadow: 3px 3px 0px black;
}

@media (prefers-color-scheme: dark) {
    :root {
        --link: #a3c3ff;
        --secondary-accent: #c99192;
        --background-primary: #34313a;
        --background-secondary: #3c3a44;
        --background-tertiary: #2e2c34;
        --border-color: #515860;
        --text-color: #fbeded;
        --link-visited: #75A6FF;
        --extra-color: #504e5a;
    }

    .external-link {
        filter: invert(100%);
    }

    .isso-thread-heading, .isso-author {
        color: #fbeded !important;
    }

    .symbolic-icon {
        filter: invert(100%);
    }
}

.isso-textarea {
    background-color: var(--background-tertiary) !important;
}

.isso-input-wrapper input {
    background-color: var(--background-tertiary) !important;
}

.isso-post-action > input {
    border: 1px outset black !important;
    border-radius: 5px !important;
    margin-top: 10px !important;
    background-color: var(--extra-color) !important;
    color: var(--text-color) !important !important;
}

.isso-preview {
    background-color: var(--background-tertiary) !important;
    background-image: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 10px, transparent 10px, transparent 10px, rgba(0, 0, 0, 0.01) 20px) !important;
}

.isso-page-author-suffix {
    color: #db7979 !important;
}

/* printers */
@media print {
    :root {
        --link: blue;
        --secondary-accent: #c99192;
        --border-color: black;
        --background-primary: #fff !important;
        --background-secondary: #fdfdfd;
        --background-tertiary: #f0f0f0;
        --text-color: #222;
        --link-visited: #460b0b;
        --extra-color: #efe4e4;
        --border: 0px single transparent;
        --shadow: 0px 0px 0px transparent;
    }

    aside {
        visibility: hidden;
        height: 0 !important;
        padding: 0 !important;
    }

    @page {
        margin: 0.5in;
    }

    h1, h2, h3, h4, h5, h6 {
        page-break-after: avoid !important;
    }

    p, li, blockquote, figure, img {
        page-break-inside: avoid !important;
    }

    #content {
        display: block !important;
    }

    .breadcrumbs {
        visibility: hidden;
        height: 0;
    }

    header {
        visibility: hidden;
        height: 0;
    }

    .external-link {
        visibility: hidden;
        width: 0;
    }

    footer {
        visibility: hidden;
        height: 0;
        padding: 0 !important;
    }

    .header-link {
        visibility: hidden;
        height: 0;
    }

    details {
        visibility: hidden;
        height: 0;
    }

    .voting-container {
        visibility: hidden;
        height: 0;
    }
}

a:link {
    color: var(--link);
}

a:visited {
    color: var(--link-visited);
}

header {
    flex-grow: 1;
    flex-basis: 100%;
    color: var(--background-secondary);
}

header img {
    height: 3em;
    width: auto;
    vertical-align: middle;
    box-shadow: var(--shadow);
    border: var(--border);
    background-color: var(--background-secondary);
}

header h1 {
    display: inline;
    vertical-align: middle;
    margin-left: 0.25em;
}

@media (prefers-color-scheme: dark) {
    header h1 {
        color: white;
    }
}

aside {
    background-color: var(--background-secondary);

    text-align: center;

    border: var(--border);
    box-shadow: var(--shadow);
    border-radius: 3px;
    padding: 15px;
}
/* ... */

